Constant class Created